[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["merpig <merpig2007@gmail.com>"]

[dependencies]
rocket =  { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }

tera = "0.10"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["handlebars_templates", "tera_templates"]
